--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 *      BASE CSS STYLING      *
 ******************************/
 h1, h2, h3, h4, h5, h6 {
-  font-family: Cormorant, serif;
+  font-family: 'Cormorant', serif;
 }
 h1 {
   font-size: 3em;
@@ -14,6 +14,10 @@ h2 {
 
 h3 {
   font-size: 1.5em;
+}
+
+p {
+  font-family: 'Lora:400i', serif;
 }
 
 header {
@@ -50,4 +54,5 @@ nav > ul li{
   color: #333024;
   font-family: Cormorant, serif;
   font-size: 1.5em;
+  font-weight: 900;
 }
