--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,15 @@ h3 {
   font-size: 1.5em;
 }
 
+h4 {
+  font-size: 1.25em;
+}
 p {
   font-family: Lora, serif;
+}
+
+em {
+  color: #96654A;
 }
 
 header {
@@ -31,6 +38,18 @@ header {
 nav {
   height: 50px;
   background-color: #333024;
+}
+
+footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  max-width: 100%;
+  height: 12em;
+  padding: 1.5em 0;
+  margin-top: .5em;
+  background-color: #ABA78F;
 }
 /******************************
 *      CUSTOM CSS LAYOUTS     *
@@ -46,6 +65,14 @@ nav {
   top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+#locations-hours-footer {
+  margin: 0 3em;
+}
+
+#locations-list-footer > li {
+  margin: 5px 0;
 }
 nav > ul {
   text-align: center;
