--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,31 @@ p {
   font-family: Lora, serif;
 }
 
-td {
+table, th, td {
+  margin: 50px auto;
+  border: 1px solid black;
+}
+
+tr {
+  text-align: left;
+}
+
+th {
+  text-align: right;
+  font-size: 1.5em;
+}
+
+th:first-child:last-of-type  {
+  font-size: 1.2em;
+}
+
+td, th {
+  vertical-align: bottom;
   padding: 5px;
+}
+
+td {
+  width: 3.2em;
 }
 
 em {
