--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Cormorant', serif;
+  margin: 5px 0;
 }
 h1 {
   font-size: 3em;
@@ -24,37 +25,12 @@ h4 {
   font-size: 1.25em;
 }
 p {
-  font-family: Lora, serif;
-}
-
-table, th, td {
-  margin: 50px auto;
-  border: 1px solid black;
-}
-
-tr {
-  text-align: left;
-}
-
-th {
-  text-align: right;
-  font-size: 1.5em;
-}
-
-th:first-child:last-of-type  {
-  font-size: 1.2em;
-}
-
-td, th {
-  vertical-align: bottom;
-  padding: 5px;
-}
-
-td {
-  width: 3.2em;
+  font-family: 'Lora:400i', serif;
+  line-height: 1.25em;
 }
 
 em {
+  font-style: italic;
   color: #96654A;
 }
 
@@ -78,9 +54,48 @@ footer {
   margin-top: .5em;
   background-color: #ABA78F;
 }
+
+/* STYLE GUIDE STYLES */
+#typography-aside {
+  text-align: center;
+  margin: 25px;
+}
 /******************************
 *      CUSTOM CSS LAYOUTS     *
 *******************************/
+
+/* Custom Table Layout */
+#table-style-guide {
+  margin: auto;
+}
+
+table {
+  font-family: 'Open+Sans', sans-serif;
+  margin: 25px auto;
+  border: 2px solid black;
+}
+
+th, td {
+  border: 1px solid #ABA78F;
+  padding: 12px 15px;
+}
+
+th {
+  font-weight: bold;
+  background: #C28C5E;
+  white-space: pre-wrap;
+}
+
+tr:last-child {
+  border-top: 2px solid #333024;
+}
+
+td:last-child, th:last-child {
+  border-left: 2px solid #333024;
+}
+
+/* End Custom Table Layout */
+
 nav > ul {
   text-align: center;
   padding: 0.4em;
@@ -94,6 +109,8 @@ nav > ul li{
   font-size: 1.5em;
   font-weight: 900;
 }
+
+
 
 #header-image-container{
   text-align: center;
