--- a/css/main.css
+++ b/css/main.css
@@ -110,17 +110,21 @@ nav > ul li{
   font-weight: 900;
 }
 
-
-
 #header-image-container{
+  opacity: 0.75;
   text-align: center;
   background-color: #ABA78F;
 }
 
 #header-h1 {
+  z-index: 1;
   position: absolute;
+  width: 33%;
+  text-align: center;
+  font-weight: bold;
+  color: black;
   font-size: 4em;
-  top: 55%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
