--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ nav > ul {
 nav > ul li{
   display: inline-block;
   margin: 0 1em;
-  color: #96654A;
+  color: white;
   font-family: Cormorant, serif;
   font-size: 1.5em;
   font-weight: 900;
@@ -125,7 +125,7 @@ nav > ul li{
   width: 33%;
   text-align: center;
   font-weight: bold;
-  color: black;
+  color: white;
   font-size: 4em;
   top: 50%;
   left: 50%;
