--- a/css/main.css
+++ b/css/main.css
@@ -88,10 +88,12 @@ th {
 
 tr:last-child {
   border-top: 2px solid #333024;
+  background: #96654A;
 }
 
 td:last-child, th:last-child {
   border-left: 2px solid #333024;
+  background: #C28C5E;
 }
 
 /* End Custom Table Layout */
