Added some sweet comment headers using my new snippet

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
-/*****************************
-*      BASE CSS STYLING      *
-******************************/
+/**************************************************
+*               BASE CSS STYLING                  *
+***************************************************/
+
 body {
   background-color: #CDBAAF;
 }
@@ -60,11 +61,16 @@ footer {
   text-align: center;
   margin: 25px;
 }
-/******************************
-*      CUSTOM CSS LAYOUTS     *
-*******************************/
 
-/* Custom Table Layout */
+/**************************************************
+*              CUSTOM CSS LAYOUTS                 *
+***************************************************/
+
+
+/**************************************************
+*              CUSTOM TABLE STYLE                 *
+***************************************************/
+
 #table-style-guide {
   margin: auto;
 }
@@ -98,9 +104,9 @@ td:last-child, th:last-child {
 
 /* End Custom Table Layout */
 
-/*****************************
-*         FORM STYLE         *
-******************************/
+/**************************************************
+*               FORM CSS STYLING                  *
+***************************************************/
 
 form {
   display: block;
@@ -133,9 +139,17 @@ input[type=number] {
   width: 55px;
 }
 
-/*****************************
-*       END FORM STYLE       *
-******************************/
+/**************************************************
+*           MORE SPECIFIC CSS STYLING             *
+***************************************************/
+#page-container {
+  padding: 10px;
+}
+
+#sales-form-section {
+  text-align: center;
+}
+
 nav a {
   text-decoration: none;
 }
