--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,8 @@ th, td {
 
 th {
   font-weight: bold;
-  background: #C28C5E;
+  background: #333024;
+  color: white;
   white-space: pre-wrap;
 }
 
@@ -97,7 +98,16 @@ tr:last-child {
   background: #96654A;
 }
 
-td:last-child, th:last-child {
+tr:last-child > th:last-child {
+  background: #C28C5E;
+  border: 1px solid black;
+}
+
+tr:last-child > th:first-child {
+  border: 2px solid black;
+}
+
+td:last-child, tr:last-child > th:last-child{
   border-left: 2px solid #333024;
   background: #C28C5E;
 }
@@ -107,7 +117,6 @@ td:last-child, th:last-child {
 /**************************************************
 *               FORM CSS STYLING                  *
 ***************************************************/
-
 form {
   display: block;
   margin-top: 0em;
@@ -115,39 +124,73 @@ form {
 
 fieldset {
   display: block;
+  width: 400px;
   margin-left: 2px;
   margin-right: 2px;
   padding-top: 0.35em;
   padding-bottom: 0.625em;
-  padding-left: 0.75em;
+  padding-left: 0em;
   padding-right: 0.75em;
-  border: 1px solid #333024;
+  color: white;
+  background: #333024;
 }
 
 legend {
+  font-size: 2em;
+  text-align: left;
+  background: #333024;
   display: block;
-  padding-left: 2px;
-  padding-right: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
   border: none;
+  color: white;
 }
 
 label {
   cursor: default;
+  padding: 5px;
+  margin: 5px; 
+  line-height: 1em;
+  float: left;
+  clear: left;
 }
 
-input[type=number] {
+input {
+  padding: 5px;
+  line-height: 1em;
+  margin: 5px;
+  float: right;
+  clear: right;
+}
+input[type="number"] {
   width: 55px;
+}
+
+#addNewShopBtn {
+  margin: 5px;
+  padding: 10px;
+  width: 100%;
+  clear: both;
+  color: white;
+  background: #96654A;
+  border: none;
 }
 
 /**************************************************
 *           MORE SPECIFIC CSS STYLING             *
 ***************************************************/
 #page-container {
+  text-align: center;
   padding: 10px;
 }
 
 #sales-form-section {
   text-align: center;
+}
+
+#sales-page-header {
+  margin: 5px auto;
 }
 
 nav a {
