--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 header {
   background-color: #CDBAAF;
-  height: 250px;
+  height: 296px;
+  margin-bottom: 30px;
   position: relative;
 }
 
@@ -11,7 +12,7 @@ header img {
 
 header h1 {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 48px;
@@ -20,7 +21,6 @@ header h1 {
 }
 
 nav {
-  height: 50px;
   max-width: 100%;
   background-color: #333024;
 }
@@ -36,4 +36,14 @@ nav li {
   width: 135px;
   line-height: 50px;
   white-space: nowrap;
+}
+
+main {
+  max-width: 960px;
+  margin: auto;
+}
+
+main section:first-child {
+  margin: auto;
+  text-align: center
 }
