--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,20 @@ nav ul {
   text-align: center;
   margin: auto;
 }
+
 nav li {
   display: inline-block;
   margin: 0 30px;
   width: 135px;
   line-height: 50px;
   white-space: nowrap;
+  color: white;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 22px;
 }
 
 main {
@@ -70,6 +78,12 @@ main section {
 main section:first-child, main section:nth-child(2) {
   text-align: center;
   width: 75%;
+}
+
+main section:nth-child(2){
+  background-color: #C28C5E;
+  padding: 30px;
+  border-radius: 30px;
 }
 
 main section article {
@@ -89,7 +103,9 @@ main section article ul {
 
 main section article ul li {
   text-align: left;
-  margin-left: 30px;
+  margin-left: 66px;
+  font-size: 18px;
+  line-height: 1.188em;
 }
 
 main section article ul li:before {
