--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   margin-bottom: 10px;
   font-size: 48px;
+  text-align: center;
 }
 
 h2 {
@@ -45,7 +46,6 @@ header img {
 
 header h1 {
   position: absolute;
-  text-align: center;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -97,19 +97,21 @@ main section:first-child, main section:nth-child(2) {
 
 main section:nth-child(2){
   background-color: #C28C5E;
-  padding: 30px;
   border-radius: 30px;
+}
+
+main section:nth-child(2) img {
+  margin: 15px;
 }
 
 main section article {
   float: left;
   width: 50%;
-  margin: 0 30px 30px 0;
 }
 
 main section article h2 {
   width: 100%;
-  margin: 20px auto 30px auto;
+  margin: 40px auto 15px auto;
 }
 
 main section article ul {
@@ -136,6 +138,54 @@ main section article ul li:before {
 
 main section:nth-child(3) {
   text-align: center;
+}
+
+main form {
+  width: 60%;
+  margin: auto;
+  background-color: #C28C5E;
+  padding-bottom: 2px;
+  border-radius: 30px;
+  font-family: 'Lora', serif;
+}
+
+main form legend {
+  padding: 2px;
+  text-align: left;
+  font-size: 24px;
+}
+
+main form fieldset {
+  border: 1px solid black;
+  margin: 10px;
+  padding: 15px;
+  border-radius: 30px;
+}
+
+main form label {
+  font-size: 20px;
+  padding: 5px;
+  float: left;
+  clear: left;
+}
+
+main form div {
+  clear: both;
+}
+main form input {
+  padding: 5px;
+  margin: 2px;
+}
+main form input[type='text'] {
+  width: 250px;
+  float: right;
+  clear: right;
+}
+
+main form input[type='number'] {
+  width: 100px;
+  float: right;
+  clear: right;
 }
 
 footer {
