--- a/css/main.css
+++ b/css/main.css
@@ -1,72 +1,210 @@
-/**************************************************
-*               BASE CSS STYLING                  *
-***************************************************/
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Cormorant', serif;
+}
+
+h1 {
+  margin-bottom: 10px;
+  font-size: 48px;
+  text-align: center;
+}
+
+h2 {
+  margin-bottom: 10px;
+  font-size: 36px;
+}
+
+h3 {
+  font-size: 32px;
+}
+
+p {
+  font-family: 'Lora', serif;
+  line-height: 1.25em;
+}
+
+p em {
+  font-family: 'Lora', serif;
+  font-style: italic;
+  color: #C28C5E;
+}
 
 body {
   background-color: #CDBAAF;
 }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Cormorant', serif;
-  margin: 5px 0;
-}
-h1 {
-  font-size: 3em;
-}
-
-h2 {
-  font-size: 2em;
-}
-
-h3 {
-  font-size: 1.5em;
-}
-
-h4 {
-  font-size: 1.25em;
-}
-p {
-  font-family: 'Lora:400i', serif;
-  line-height: 1.25em;
-}
-
-em {
-  font-style: italic;
-  color: #96654A;
-}
-
 header {
+  height: 296px;
+  margin-bottom: 30px;
   position: relative;
-}
-
-nav {
-  height: 35px;
-  background-color: #333024;
-}
-
-footer {
-  position: relative;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  max-width: 100%;
-  height: 12em;
-  padding: 1.5em 0;
-  margin-top: .5em;
   background-color: #ABA78F;
 }
 
-/* STYLE GUIDE STYLES */
-#typography-aside {
-  text-align: center;
-  margin: 25px;
+header img {
+  display: block;
+  margin: auto;
+  opacity: 0.70;
 }
 
-/**************************************************
-*              CUSTOM CSS LAYOUTS                 *
-***************************************************/
+header h1 {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 52px;
+  font-weight: bold;
+  color: white;
+}
 
+nav {
+  max-width: 100%;
+  background-color: #333024;
+}
 
+nav ul {
+  max-width: 960px;
+  text-align: center;
+  margin: auto;
+}
+
+nav li {
+  display: inline-block;
+  margin: 0 30px;
+  width: 135px;
+  font-family: 'Lora', serif;
+  line-height: 50px;
+  white-space: nowrap;
+  color: white;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 22px;
+}
+
+main {
+  max-width: 960px;
+  margin: auto;
+}
+
+main section {
+  margin: 0 auto 30px auto;
+}
+
+main section:first-child, main section:nth-child(2) {
+  text-align: center;
+  width: 75%;
+}
+
+main section:nth-child(2){
+  background-color: #C28C5E;
+  border-radius: 30px;
+}
+
+main section:nth-child(2) img {
+  margin: 15px;
+}
+
+main section article {
+  float: left;
+  width: 50%;
+}
+
+main section article h2 {
+  width: 100%;
+  margin: 40px auto 15px auto;
+}
+
+main section article ul {
+  font-size: 16px;
+}
+
+main section article ul li {
+  text-align: left;
+  margin-left: 66px;
+  font-size: 18px;
+  line-height: 1.188em;
+}
+
+main section article ul li:before {
+    content: '';
+    display: inline-block;
+    height: 10px;
+    width: 30px;
+    background-size: 30px;
+    background-image: url("../img/salmon.png");
+    background-repeat: no-repeat;
+    margin-right: 10px;
+}
+
+main section:nth-child(3) {
+  text-align: center;
+}
+
+main form {
+  width: 60%;
+  margin: auto;
+  background-color: #C28C5E;
+  padding-bottom: 2px;
+  border-radius: 30px;
+  font-family: 'Lora', serif;
+}
+
+main form legend {
+  padding: 2px;
+  text-align: left;
+  font-size: 24px;
+}
+
+main form fieldset {
+  border: 1px solid black;
+  margin: 10px;
+  padding: 15px;
+  border-radius: 30px;
+}
+
+main form label {
+  font-size: 20px;
+  padding: 5px;
+  float: left;
+  clear: left;
+}
+
+main form div {
+  clear: both;
+}
+main form input {
+  padding: 5px;
+  margin: 2px;
+}
+main form input[type='text'] {
+  width: 250px;
+  float: right;
+  clear: right;
+}
+
+main form input[type='number'] {
+  width: 100px;
+  float: right;
+  clear: right;
+}
+main form input[type='submit'] {
+  width: 50%;
+  float: right;
+  clear: both;
+  height: 39px;
+  margin: 5px auto;
+  border: none;
+  border-radius: 30px;
+  background-color: #333024;
+  color: white;
+}
+
+main form input[type='submit']:hover {
+background-color: #555;
+transition: background-color 350ms ease-in;
+color: white;
+border: 2px solid #555;
+}
 /**************************************************
 *              CUSTOM TABLE STYLE                 *
 ***************************************************/
@@ -77,8 +215,11 @@ footer {
 
 table {
   font-family: 'Open+Sans', sans-serif;
-  margin: 25px auto;
+  max-width: 100%;
+  margin: 25px auto 25px -100px;
   border: 2px solid black;
+  overflow: hidden;
+  overflow-x: scroll;
 }
 
 th, td {
@@ -114,144 +255,59 @@ td:last-child, tr:last-child > th:last-child{
 
 /* End Custom Table Layout */
 
-/**************************************************
-*               FORM CSS STYLING                  *
-***************************************************/
-form {
-  display: block;
-  margin-top: 0em;
+footer {
+  height: 175px;
+  background-color: #333024;
+  padding: 1.5em;
 }
 
-fieldset {
-  display: block;
-  width: 400px;
-  margin-left: 2px;
-  margin-right: 2px;
-  padding-top: 0.35em;
-  padding-bottom: 0.625em;
-  padding-left: 0em;
-  padding-right: 0.75em;
-  color: white;
-  background: #333024;
-}
-
-legend {
-  font-size: 2em;
-  text-align: left;
-  background: #333024;
-  display: block;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  border: none;
-  color: white;
-}
-
-label {
-  cursor: default;
-  padding: 5px;
-  margin: 5px; 
-  line-height: 1em;
+footer section {
   float: left;
-  clear: left;
-}
-
-input {
-  padding: 5px;
-  line-height: 1em;
-  margin: 5px;
-  float: right;
-  clear: right;
-}
-input[type="number"] {
-  width: 55px;
-}
-
-#addNewShopBtn {
-  margin: 5px;
-  padding: 10px;
-  width: 100%;
-  clear: both;
+  margin: 0 50px 0;
   color: white;
-  background: #96654A;
+}
+
+footer h3 {
+  margin: 0 0 10px 0;
+}
+
+footer ul li {
+  font-size: 18px;
+  line-height: 1.10em;
+}
+
+footer address{
+  font-size: 20px;
+  line-height: 1.5em;
+}
+
+footer fieldset {
+  border: 1px solid #96654A;
+  padding: 15px;
+}
+
+footer legend {
+  font-size: 20px;
+}
+
+footer input[type='email'] {
+  width: 300px;
+  padding: 10px;
+  margin-right: 20px;
+}
+
+footer input[type='submit'] {
+  width: 150px;
+  height: 39px;
   border: none;
-}
-
-/**************************************************
-*           MORE SPECIFIC CSS STYLING             *
-***************************************************/
-#page-container {
-  text-align: center;
-  padding: 10px;
-}
-
-#sales-form-section {
-  text-align: center;
-}
-
-#sales-page-header {
-  margin: 5px auto;
-}
-
-nav a {
-  text-decoration: none;
-}
-
-nav > ul {
-  text-align: center;
-  padding: 0.4em 0;
-}
-
-nav > ul li{
-  display: inline-block;
-  margin: 0 1em;
+  border-radius: 30px;
+  background-color: #96654A;
   color: white;
-  font-family: Cormorant, serif;
-  font-size: 1.5em;
-  font-weight: 900;
 }
 
-#header-image-container{
-  opacity: 0.75;
-  text-align: center;
-  background-color: #ABA78F;
-}
-
-#header-h1 {
-  z-index: 1;
-  position: absolute;
-  width: 33%;
-  text-align: center;
-  font-weight: bold;
-  color: white;
-  font-size: 4em;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#about-salmon-cookies {
-  margin: 25px auto;
-  text-align: center;
-  width: 66%;
-  max-width: 960px;
-}
-
-#health-benefits-list {
-  margin: 20px auto;
-  padding: 5px;
-  max-width: 860px;
-  width: 33%;
-  text-align: center;
-  background-color: #C28C5E;
-  border-radius: 5px;
-}
-
-#locations-hours-footer {
-  margin: 0 3em;
-  float: left;
-}
-
-#locations-list-footer > li {
-  margin: 5px 0;
+footer input[type='submit']:hover {
+  background-color: white;
+  transition: background-color 350ms ease-in;
+  color: #96654A;
+  border: 2px solid #96654A;
 }
